<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ClackUpdateActivity">

    <LinearLayout
        android:id="@+id/create_clack_fields_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clack_update_btn_reset"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/brown"
            android:onClick="onReset"
            android:text="@string/reset"
            android:textColor="@color/yellow"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clack_update_btn_add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onAddFields"
            android:text="@string/add"
            android:textColor="@color/cyan"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clack_update_btn_submit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onSubmit"
            android:text="@string/submit"
            android:textColor="@color/amber"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>